# ducklake-export

./: LICENSE  README.md  export_ducklake.py  pyproject.toml
sql/: ducklake.sql
template/: athena_table_template.sql.j2
